@@ -1,3 +1,10 @@
+2011-04-12  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* PointsToolbox/plot_dmatrix.m: v0.1.1
+
+	- Plot vertices as disconnected dots, so that their connections
+	don't get confused with distance matrix connetions.
+
 2011-04-11  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
 	* FiltersToolbox/skeleton_label.m: v0.3.2
